Add local dev environment and web frontend
